Rename base to _base.html and other tweaks.

--- a/templates/about.html
+++ b/templates/about.html
@@ -1,9 +1,8 @@
-{% extends "base.html" %}
+{% extends "_base.html" %}
 {% block title %}About Us{% endblock %}
 {% block tagline_text %}About Us{% endblock %}
 {% block lead %}About ClinDesk &amp; White Coat Academy{% endblock %}
 {% block maincontent%}
-
 <div class="container">
 
   <!-- Docs nav
