--- a/templates/conditions/_condition_page.html
+++ b/templates/conditions/_condition_page.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "_base.html" %}
 {% block title %}TITLE{% endblock %}
 {% block tagline_text %}TAGLINE_TEXT{% endblock %}
 {% block maincontent %}
