--- a/templates/conditions/index.html
+++ b/templates/conditions/index.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "_base.html" %}
 {% block title %}Conditions and Diseases{% endblock %}
 {% block tagline_text %}Conditions{% endblock %}
 {% block lead %}Learn more about any disease or condition{% endblock %}
