--- a/templates/diagnostics/index.html
+++ b/templates/diagnostics/index.html
@@ -1,35 +1,5 @@
-{% extends "base.html" %}
-{% block title %}Diagnostics{% endblock %}
-{% block tagline_text %}Diagnostics{% endblock %}
-{% block maincontent %}
-<!--main content-->
-<section class="mainContentWrap">
-  <div class="container mainContent">
-    <div class="row-fluid">
-      <div class="span9">
-        <div class="row-fluid">
-          <div class="innerSpacer">
-
-            <!--404 error-->
-            <div class="row-fluid">
-              <div class="span12">
-		<h1>Coming Soon</h1>
-              </div>
-            </div>
-
-
-
-          </div>
-        </div>
-      </div>
-
-
-
-
-
-
-    </div>
-  </div>
-</section>
-
-{% endblock %}
+{% extends "_base.html" %}
+{% block title %}Diagnostic Tests{% endblock %}
+{% block tagline_text %}Diagnostic Tests{% endblock %}
+{% block lead %}Coming Soon -- Stay Tuned!{% endblock %}
+{% block maincontent %}{% endblock %}
