--- a/templates/donate.html
+++ b/templates/donate.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "_base.html" %}
 {% block title %}Support Us{% endblock %}
 {% block tagline_text %}Help Open Medicine{% endblock %}
 {% block lead %}Donate and help us to create free medical resources{% endblock %}
