--- a/templates/errors/404.html
+++ b/templates/errors/404.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "_base.html" %}
 {% block title %}Error: Page Not Found{% endblock %}
 {% block tagline_text %}Page Not Found{% endblock %}
 {% block lead %}Sorry about that. Hopefully we'll fix this error soon.{% endblock %}
