--- a/templates/help.html
+++ b/templates/help.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "_base.html" %}
 {% block title %}Help &amp; FAQ{% endblock %}
 {% block tagline_text %}Help &amp; FAQ{% endblock %}
 {% block lead %}Confused? Don't hesitate to e-mail us{% endblock %}
