--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "_base.html" %}
 {% block title %}Welcome to ClinDesk{% endblock %}
 {# {% block jumbotron_class %}masthead{% endblock %} #}
 {% block tagline_text %}Welcome to ClinDesk{% endblock %}
