--- a/templates/search.html
+++ b/templates/search.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "_base.html" %}
 {% block title %}Search{% endblock %}
 {% block tagline_text %}Search{% endblock %}
 {% block lead %}{% endblock %}
