--- a/templates/_disclaimer.html
+++ b/templates/_disclaimer.html
@@ -1,5 +1,5 @@
 {# This a disclaimer that appears everywhere on CD & WCA.
-        Dismissing the disclaimer adds a cookie, via /getcookie #}
+        Dismissing the disclaimer adds a cookie via JS #}
 <div class="alert alert-error fade in" id="disclaimer">
     <h4 class="alert-heading">ClinDesk and White Coat Academy should only be used for reference</h4><br/>
    <p>Remember, we're a team of medical students. Although we try our best to ensure the accuracy of all our materials,
