--- a/templates/conditions/_all_topics_page.html
+++ b/templates/conditions/_all_topics_page.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "_base.html" %}
 {% block maincontent %}
 <!--main content-->
 <div class="container mainContent">
