Update bottom logo magic.

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,17 +5,19 @@
 {% block lead %}Opening Medical Education{% endblock %}
 {% block extra_jumbotron %}{% endblock %}
 {% block maincontent %}
-<div class="container"><br>
+<br>
+<div class="container">
     <div class="row-fluid">
         <div class="span12">
             <div class="hero-unit"">
-                <p class="lead">Welcome:</p>
-                <p>ClinDesk comprises a team of senior medical students and resident physicians who are deeply familiar with medical knowledge and education. </p>
-                <p>Over the coming months, we'll be producing educational videos to walk patients and their families through diseases, from the basic biology &amp; epidemiology, to treatment options &amp; outcomes.</p>
-                <p>Together with our sister-site <a href="http://www.WhiteCoatAcademy.org/" target="_blank">White Coat Academy</a>, we hope to change the face of medical education.</p><br>
-                <p>Stay tuned,</p>
-                <p>Nick Semenkovich</p>
-                <p style="line-height:0px">Founder</p>
+            <p class="lead">Welcome:</p>
+            <p>ClinDesk comprises a team of senior medical students and resident physicians who are deeply familiar with medical knowledge and education. </p>
+            <p>Over the coming months, we'll be producing educational videos to walk patients and their families through diseases, from the basic biology &amp; epidemiology, to treatment options &amp; outcomes.</p>
+            <p>Together with our sister-site <a href="http://www.WhiteCoatAcademy.org/" target="_blank">White Coat Academy</a>, we hope to change the face of medical education.</p><br>
+            <span style="float:right;"><img src="{{ static('img/logos/bottom-drop-banner.png') }}" height="120" width="600" alt="ClinDesk &amp; WhiteCoatAcademy" class="img-rounded img-polaroid"></span>
+            <p>Stay tuned,</p>
+            <p>Nick Semenkovich</p>
+            <p style="line-height:0px">Founder</p>
             </div>
         </div>
     </div>
