Spacing. Not sure about the font size, @dgermain

--- a/templates/donate.html
+++ b/templates/donate.html
@@ -3,7 +3,7 @@
 {% block tagline_text %}Help Open Medicine{% endblock %}
 {% block lead %}Donate and help us to create free medical resources{% endblock %}
 {% block maincontent %}
-
+<body>
 <div class="container">
     <br><br>
     <div class="row">
@@ -25,7 +25,7 @@
                     <input type="hidden" name="abandonUrl" value="http://www.clindesk.org/donate.html" >
                     <input type="hidden" name="signatureVersion" value="2" >
                     <input type="hidden" name="signature" value="Ixt8S3PKIAPl8p/8i5NewotJoL87DsePxrWGMWHsdnA=" >
-                    <h2 class="text-warning">Hosting for A Day</h2>
+                    <h2 class="text-warning">Hosting for A Day</h2><br>
                     <p class="lead">Running our website is expensive!</p>
                     <p class="lead">Help spread medical knowledge by keeping us running.</p>
                     <button type="submit" class="btn btn-warning btn-large">Help Run our Website for <b>$25</b></button>
@@ -50,7 +50,7 @@
                     <input type="hidden" name="abandonUrl" value="http://www.clindesk.org/donate.html" >
                     <input type="hidden" name="signatureVersion" value="2" >
                     <input type="hidden" name="signature" value="aosHYUTumKOokLeC94W909v6q7XDDpZTGlvJekV99ss=" >
-                    <h2 class="text-success">Sponsor a Disease</h2>
+                    <h2 class="text-success">Sponsor a Disease</h2><br>
                     <p class="lead">Want something we don't have? Sponsor a disease and we'll add it to our video series.</p>
                     <p class="lead">If you sponsor a disease, we'll get in touch and work with you as we make our videos!</p>
                     <button type="submit" class="btn btn-success btn-large">Sponsor a Disease for <b>$200</b></button>
@@ -74,7 +74,7 @@
                     <input type="hidden" name="abandonUrl" value="http://www.clindesk.org/donate.html" >
                     <input type="hidden" name="signatureVersion" value="2" >
                     <input type="hidden" name="signature" value="HkHrz3l6FdCLDUnwxKP8JNtLaH/tjUTovpwZ4PP2oFE=" >
-                    <h2 class="text-info">Give What You Can</h2>
+                    <h2 class="text-info">Give What You Can</h2><br>
                     <p class="lead">Help us open medical knowledge.</p>
                     <blockquote>
                       <p>The history of medicine is that what was inconceivable yesterday and barely achievable today often becomes routine tomorrow.</p>
