--- a/s/css/shared.css
+++ b/s/css/shared.css
@@ -5,7 +5,7 @@ body {
   position: relative;
   padding-top: 40px;
 }
-}
+
 
 /* Tweak navbar brand link to be super sleek
 -------------------------------------------------- */
@@ -80,13 +80,13 @@ hr.soften {
   text-align: center;
   text-shadow: 0 1px 3px rgba(0,0,0,.4), 0 0 30px rgba(0,0,0,.075);
   background: #020031; /* Old browsers */
-  background: -moz-linear-gradient(45deg,  #020031 0%, #6d3353 100%); /* FF3.6+ */
-  background: -webkit-gradient(linear, left bottom, right top, color-stop(0%,#020031), color-stop(100%,#6d3353)); /* Chrome,Safari4+ */
-  background: -webkit-linear-gradient(45deg,  #020031 0%,#6d3353 100%); /* Chrome10+,Safari5.1+ */
-  background: -o-linear-gradient(45deg,  #020031 0%,#6d3353 100%); /* Opera 11.10+ */
-  background: -ms-linear-gradient(45deg,  #020031 0%,#6d3353 100%); /* IE10+ */
-  background: linear-gradient(45deg,  #020031 0%,#6d3353 100%); /* W3C */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#020031', endColorstr='#6d3353',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+  background: -moz-linear-gradient(90deg, #181368 60%, #093ec5 100%); /* FF3.6+ */
+  background: -webkit-gradient(linear, left bottom, right top, color-stop(0%,#181368), color-stop(100%,#093ec5)); /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(90deg, #181368 60%, #093ec5 100%); /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(90deg, #181368 60%,#093ec5 100%); /* Opera 11.10+ */
+  background: -ms-linear-gradient(90deg, #181368 60%,#093ec5 100%); /* IE10+ */
+  background: linear-gradient(90deg, #181368 60%,#093ec5 100%); /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#181368', endColorstr='#093ec5',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
   -webkit-box-shadow: inset 0 3px 7px rgba(0,0,0,.2), inset 0 -3px 7px rgba(0,0,0,.2);
      -moz-box-shadow: inset 0 3px 7px rgba(0,0,0,.2), inset 0 -3px 7px rgba(0,0,0,.2);
           box-shadow: inset 0 3px 7px rgba(0,0,0,.2), inset 0 -3px 7px rgba(0,0,0,.2);
@@ -160,7 +160,6 @@ hr.soften {
   right: 0;
   bottom: 0;
   left: 0;
-  background: url(../img/bs-docs-masthead-pattern.png) repeat center center;
   opacity: .4;
 }
 
