--- a/templates/conditions/metabolism-and-endocrine/_all.html
+++ b/templates/conditions/metabolism-and-endocrine/_all.html
@@ -6,7 +6,7 @@
                 <div class="caption">
                     <h3>Diabetes</h3>
                     <p>Learn about management of diabetes, insulin, and diabetes medications.</p><br>
-                    <p><a href="#" class="btn btn-primary" disabled>Coming Soon</a></p>
+                    <p><a href="diabetes.html" class="btn btn-primary">Learn about Diabetes</a></p>
                 </div>
             </div>
         </li>
