Testing renaming, + Minor tweaks & fixes.

--- a/clindesk/templates/_base.html
+++ b/clindesk/templates/_base.html
@@ -63,7 +63,7 @@
 <footer class="footer">
     <div class="container">
         <p class="pull-right"><a href="#">Back to top</a></p>
-        <p>&copy 2012 ClinDesk, Inc., some rights reserved</p>
+        <p>&copy; 2012 ClinDesk, Inc., some rights reserved</p>
         <p>Videos are licensed under the Creative Commons <a href="https://creativecommons.org/licenses/by-nc-sa/3.0" target="_blank">CC BY NC SA 3.0</a> license.</p>
         <ul class="footer-links">
             <li><a href="/">Home</a></li>
