--- a/whitecoatacademy/templates/_base.html
+++ b/whitecoatacademy/templates/_base.html
@@ -1,10 +1,10 @@
 <!DOCTYPE HTML>
 <html lang="en">
 <head>
-    <title>{% block title %}{% endblock %} &mdash; ClinDesk, Inc.</title>
+    <title>{% block title %}{% endblock %} &mdash; White Coat Academy, Inc.</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
     <meta name="description" content="{% block meta_description %}{% endblock %}" />
-    <meta name="author" content="{% block meta_author %}Nick Semenkovich (@semenko), ClinDesk &amp; White Coat Academy{% endblock %}" />
+    <meta name="author" content="{% block meta_author %}Nick Semenkovich (@semenko), White Coat Academy &amp; White Coat Academy{% endblock %}" />
     <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.2.1/css/bootstrap.no-icons.min.css" rel="stylesheet">
     <link href="//netdna.bootstrapcdn.com/font-awesome/2.0/css/font-awesome-protocol-less.css" rel="stylesheet">
     {%- if config.apphost is defined -%}
@@ -31,7 +31,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="brand" href="/"><img src="{{ static('img/content/logo_sml.png') }}" alt="ClinDesk, Inc."></a>
+            <a class="brand" href="/"><img src="{{ static('img/content/logo_sml.png') }}" alt="White Coat Academy, Inc."></a>
             <!-- Things that get hidden at <= 940px -->
             <div class="nav-collapse collapse">
                 <ul class="nav">
@@ -63,7 +63,7 @@
 <footer class="footer">
     <div class="container">
         <p class="pull-right"><a href="#">Back to top</a></p>
-        <p>&copy 2012 ClinDesk, Inc., some rights reserved</p>
+        <p>&copy; 2012 White Coat Academy, Inc., some rights reserved</p>
         <p>Videos are licensed under the Creative Commons <a href="https://creativecommons.org/licenses/by-nc-sa/3.0" target="_blank">CC BY NC SA 3.0</a> license.</p>
         <ul class="footer-links">
             <li><a href="/">Home</a></li>
