--- a/clindesk/templates/index.html
+++ b/clindesk/templates/index.html
@@ -9,7 +9,7 @@
 <div class="container">
     <div class="row-fluid">
         <div class="span12">
-            <div class="hero-unit"">
+            <div class="hero-unit">
             <p class="lead">Welcome:</p>
             <p>ClinDesk comprises a team of senior medical students and resident physicians who are deeply familiar with medical knowledge and education. </p>
             <p>Over the coming months, we'll be producing educational videos to walk patients and their families through diseases, from the basic biology &amp; epidemiology, to treatment options &amp; outcomes.</p>
