--- a/whitecoatacademy/templates/index.html
+++ b/whitecoatacademy/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "_base.html" %}
-{% block title %}Welcome to ClinDesk{% endblock %}
+{% block title %}Welcome to White Coat Academy{% endblock %}
 {# {% block jumbotron_class %}masthead{% endblock %} #}
-{% block tagline_text %}Welcome to ClinDesk{% endblock %}
+{% block tagline_text %}Welcome to White Coat Academy{% endblock %}
 {% block lead %}Opening Medical Education{% endblock %}
 {% block extra_jumbotron %}{% endblock %}
 {% block maincontent %}
@@ -9,11 +9,11 @@
 <div class="container">
     <div class="row-fluid">
         <div class="span12">
-            <div class="hero-unit"">
+            <div class="hero-unit">
             <p class="lead">Welcome:</p>
-            <p>ClinDesk comprises a team of senior medical students and resident physicians who are deeply familiar with medical knowledge and education. </p>
+            <p>White Coat Academy comprises a team of senior medical students and resident physicians who are deeply familiar with medical knowledge and education. </p>
             <p>Over the coming months, we'll be producing educational videos to walk patients and their families through diseases, from the basic biology &amp; epidemiology, to treatment options &amp; outcomes.</p>
-            <p>Together with our sister-site <a href="http://www.WhiteCoatAcademy.org/" target="_blank">White Coat Academy</a>, we hope to change the face of medical education.</p><br>
+            <p>Together with our sister-site <a href="http://www.clindesk.org/" target="_blank">ClinDesk</a>, we hope to change the face of medical education.</p><br>
             <span style="float:right;"><img src="{{ static('img/logos/bottom-drop-banner.png') }}" height="120" width="600" alt="ClinDesk &amp; WhiteCoatAcademy" class="img-rounded img-polaroid"></span>
             <p>Stay tuned,</p>
             <p>Nick Semenkovich</p>
@@ -29,7 +29,7 @@
 <!--description-->
 <div class="span3">
     <div class="item-description">
-        <h3>Welcome to ClinDesk</h3>
+        <h3>Welcome to White Coat Academy</h3>
         <div class="subtitle">
             <span class="icon-file "></span><a href="#">Opening Medical knowledge</a>
         </div>
