Tweaks, renaming, disease pages, etc.

--- a/whitecoatacademy/templates/conditions/metabolism-and-endocrine/index.html
+++ b/whitecoatacademy/templates/conditions/metabolism-and-endocrine/index.html
@@ -1,10 +1,9 @@
-{% extends "conditions/_all_topics_page.html" %}
+{% extends "conditions/_condition_index_page.html" %}
 {% block title %}Metabolism and Endocrine{% endblock %}
 {% block tagline_text %}Metabolism and Endocrine{% endblock %}
 {% block lead %}Diabetes, thyroid diseases, metabolic syndrome, obesity, and more{% endblock %}
-{% block video_source %}5vfdIE-eMig{% endblock %}
+{% block video_source %}W1rleLtFly4{% endblock %}
 {% block author_name %}Nick Semenkovich{% endblock %}
 {% block author_image %}{{ static('img/heads/semenko.jpg') }}{% endblock %}
-{% block welcome_text %}Welcome to the endo topic, etc.{% endblock %}
 {% block section_title %}Endocrine and Metabolic Conditions{% endblock %}
 {% block all_conditions %}{% include 'conditions/metabolism-and-endocrine/_all.html' %}{% endblock %}
