--- a/whitecoatacademy/templates/conditions/metabolism-and-endocrine/diabetes.html
+++ b/whitecoatacademy/templates/conditions/metabolism-and-endocrine/diabetes.html
@@ -1,3 +1,5 @@
 {% extends "conditions/_individual_condition_page.html" %}
-{% block title %}Diabetes{% endblock %}
-{% block tagline_text %}Metabolism and Endocrine &rarr; Diabetes{% endblock %}
+{% block title %}Diabetes (Type 2){% endblock %}
+{% block tagline_text %}Diabetes (Type 2){% endblock %}
+{% block lead %}Diagnosis, symptoms, treatment, and prognosis{% endblock %}
+
