A hodgepodge of changes.

--- a/whitecoatacademy/templates/help.html
+++ b/whitecoatacademy/templates/help.html
@@ -10,18 +10,18 @@
             <div class="well">
                 <h3>Q: What if my doctor tells me something different?</h3>
                 <p>Always listen to your doctor! Medicine is complex and extremely personal. Our understanding of diseases, diagnostics, and therapeutic options are changing daily.</p>
-                <p>ClinDesk and White Coat Academy are only guides to help you understand conditions, and barely skim the surface of medicine. A medical professional knows best!</p>
+                <p>White Coat Academy is only a guide to help you understand conditions, and barely skim the surface of medicine. A medical professional knows best!</p>
             </div>
             <div class="well">
-                <h3>Q: Can I trust what I find on ClinDesk and White Coat Academy?</h3>
+                <h3>Q: Can I trust what I find on White Coat Academy?</h3>
                 <p>We hope so! We go to great lengths to ensure our content is accurate, but we might make some mistakes (keep in mind we're medical students!).
                     To make sure we're as error-free as possible, we review all our videos, and our clinical advisory board checks our content.</p>
-                <p>If you've found an error or mistake, please let us know at <a href="mailto:team@clindesk.org">team@clindesk.org</a>.</p>
+                <p>If you've found an error or mistake, please let us know at <a href="mailto:team@whitecoatacademy.org">team@whitecoatacademy.org</a>.</p>
             </div>
             <div class="well">
                 <h3>Q: Can I save or download your videos and other content? What's your copyright policy?</h3>
-                <p>Yes, we encourage it -- with one caveat. We license all our content under a <a href="http://creativecommons.org/" target="_blank">Creative Commons</a> license.
-                    We've chosen the Creative Commons 3.0 <a href="http://creativecommons.org/licenses/by-nc-sa/3.0/us/" target="_blank">BY-NC-SA License</a>.</p>
+                <p>Yes, we encourage it -- with one caveat. We license all our content under a <a href="https://creativecommons.org/" target="_blank">Creative Commons</a> license.
+                    We've chosen the Creative Commons 3.0 <a href="https://creativecommons.org/licenses/by-nc-sa/3.0/us/" target="_blank">BY-NC-SA License</a>.</p>
                 <p>This means three things:</p>
                 <ul>
                     <li>BY &mdash; By Attribution: You must clearly attribute any content to ClinDesk &amp; White Coat Academy.</li>
@@ -31,7 +31,7 @@
             </div>
             <div class="well">
                 <h3>Q: How can I give feedback? I think I found a mistake on the site.</h3>
-                <p>We'd love to hear from you!  if you find a topic confusing (or think we got something wrong!), e-mail us at <a href="mailto:team@clindesk.org">team@clindesk.org</a>. Keep in mind that we cannot provide any medical advice, but we'd love feedback on our videos!</p></p>
+                <p>We'd love to hear from you!  if you find a topic confusing (or think we got something wrong!), e-mail us at <a href="mailto:team@whitecoatacademy.org">team@whitecoatacademy.org</a>. Keep in mind that we cannot provide any medical advice, but we'd love feedback on our videos!</p></p>
             </div>
             <div class="well">
                 <h3>Q: How is ClinDesk financed? Do you make money?</h3>
@@ -47,11 +47,11 @@
             <h3>Get in Touch</h3>
             Can't find what you're looking for?<br/>Shoot us an e-mail or send us a Tweet!<br/<br/><br/>
             <div>
-                <p><i class="icon-envelope"></i> E-Mail: &nbsp;<a href="mailto:team@clindesk.org">team@clindesk.org</a><br></p>
+                <p><i class="icon-envelope"></i> E-Mail: &nbsp;<a href="mailto:team@whitecoatacademy.org">team@whitecoatacademy.org</a><br></p>
             </div>
             <div>
                 <p><i class="icon-twitter-sign icon-large"></i>
-                    Tweets: <a href="https://twitter.com/ClinDesk" target="_blank">@ClinDesk</a><br/>
+                    Tweets: <a href="https://twitter.com/WhiteCoatAcad" target="_blank">@WhiteCoatAcad</a><br/>
             </div>
         </div>
     </div>
