--- a/whitecoatacademy/templates/index.html
+++ b/whitecoatacademy/templates/index.html
@@ -13,7 +13,7 @@
             <p class="lead">Welcome:</p>
             <p>White Coat Academy comprises a team of senior medical students and resident physicians who are deeply familiar with medical knowledge and education. </p>
             <p>Over the coming months, we'll be producing educational videos to walk patients and their families through diseases, from the basic biology &amp; epidemiology, to treatment options &amp; outcomes.</p>
-            <p>Together with our sister-site <a href="http://www.clindesk.org/" target="_blank">ClinDesk</a>, we hope to change the face of medical education.</p><br>
+            <p>Together with our parent organization <a href="http://www.clindesk.org/" target="_blank">ClinDesk</a>, we hope to change the face of medicine.</p><br>
             <span style="float:right;"><img src="{{ static('img/logos/bottom-drop-banner.png') }}" height="120" width="600" alt="ClinDesk &amp; WhiteCoatAcademy" class="img-rounded img-polaroid"></span>
             <p>Stay tuned,</p>
             <p>Nick Semenkovich</p>
