--- a/whitecoatacademy/templates/about.html
+++ b/whitecoatacademy/templates/about.html
@@ -1,9 +1,9 @@
 {% extends "_base.html" %}
 {% block title %}About Us{% endblock %}
 {% block tagline_text %}About Us{% endblock %}
-{% block lead %}About ClinDesk &amp; White Coat Academy{% endblock %}
+{% block lead %}About White Coat Academy &amp; ClinDesk{% endblock %}
 {% block maincontent%}
-<div class="container">
+<div class="container" xmlns="http://www.w3.org/1999/html" xmlns="http://www.w3.org/1999/html">
 
   <!-- Docs nav
   ================================================== -->
@@ -22,14 +22,14 @@
         <div class="page-header">
           <h1>Our Philosophy</h1>
         </div>
-          <p class="lead">ClinDesk comprises a team of senior medical students and resident physicians who are deeply familiar with
+          <p class="lead">White Coat Academy comprises a team of senior medical students and resident physicians who are deeply familiar with
               medical knowledge and education. Our recent experiences in medical school have helped shape our view that
               there is a disconnect between the training of physicians and the way patients learn about and understand
               their health.</p>
           <p class="lead">Our mission is to lead the transition of medical education from a proprietary to “open” process. We believe
               this process should be scalable and agile -- health literacy should be accessible to everyone in a
               context-appropriate fashion.</p>
-          <p class="lead">With that goal in mind, we have designed and built ClinDesk.org, a free video library that opens medical
+          <p class="lead">With that goal in mind, we have designed and built White Coat Academy.org, a free video library that opens medical
               education to patients and their families and friends. Our videos are organized by medical speciality and
               specific disease, which walk you through the basic biology, “who and when” epidemiology, symptoms, and
               treatment/outcomes of each condition you or someone you know might be facing.</p>
@@ -72,7 +72,7 @@
                   <span style="float:left; padding-right: 10px;"><img class="thumbnail" src="{{ static('img/heads/dgermain.jpg') }}" width="150"/></span>
                   <span>David spent his undergrad at Stanford and will one day cure leukemia. He's currently an MD/PhD student in the lab of Dr. Tim Ley,
                         focused on epigenetic regulatory mechanisms of AML. When not at lab, he spends time entertaining his magnificient cat, Osmo.
-                      <br/><br/><p>E-Mail: <a href="mailto:dgermain@clindesk.org">dgermain@clindesk.org</a></p>
+                      <br/><br/><p>E-Mail: <a href="mailto:dgermain@whitecoatacademy.org">dgermain@whitecoatacademy.org</a></p>
                   </span>
               </div>
           </div>
@@ -87,7 +87,7 @@
                   <span style="float:left; padding-right: 10px;"><img class="thumbnail" src="{{ static('img/heads/rayjean.jpg') }}" width="150"/></span>
                   <span>Ray did his undergrad at Harvard where he was an engineering major. He's now a fourth year medical student, taking a year off to
                       expand the world's medical knowledge while doing research with Dr. Jay Picarillo.
-                      <br/><br/><br/><p>E-Mail: <a href="mailto:rayjean@clindesk.org">rayjean@clindesk.org</a></p>
+                      <br/><br/><br/><p>E-Mail: <a href="mailto:rayjean@whitecoatacademy.org">rayjean@whitecoatacademy.org</a></p>
                   </span>
               </div>
               <div class="span6">
@@ -100,7 +100,7 @@
                   <span style="float:left; padding-right: 10px;"><img class="thumbnail" src="{{ static('img/heads/aaronm.jpg') }}" width="150"/></span>
                   <span>Aaron spent his undergrad years at Stanford, and is currently a fourth year medical student. After his residency, Aaron will
                       likely direct operations and innovation at a large academic medical center.
-                      <br/><br/><br/><p>E-Mail: <a href="mailto:aaronm@clindesk.org">aaronm@clindesk.org</a></p>
+                      <br/><br/><br/><p>E-Mail: <a href="mailto:aaronm@whitecoatacademy.org">aaronm@whitecoatacademy.org</a></p>
                   </span>
               </div>
 
@@ -113,35 +113,10 @@
             <div class="page-header">
                 <h1>Non-Profit Governance</h1>
             </div>
-            <div class="tabbable tabs-left">
-                <ul class="nav nav-tabs">
-                    <li class="active"><a href="#home" data-toggle="tab">Overview</a></li>
-                    <li><a href="#docs-state" data-toggle="tab">State Filings</a></li>
-                    <li><a href="#docs-federal" data-toggle="tab">Federal Filings</a></li>
-                    <li><a href="#docs-internal" data-toggle="tab">Policies &amp; Bylaws</a></li>
-                </ul>
-                <div class="tab-content">
-                    <div class="tab-pane active" id="home">
-                        <p>At ClinDesk and White Coat Academy, we try to be as transparent as possible with our finances and governance
-                            (in the hopes that you'll <a href="donate.html">donate</a> to help keep us going!).</p>
-                        <p>You can see some of our documents listed in the above tabs. Over the next year, we'll expand these listings as we grow.</p>
-                        <p>Some documents &mdash; such as the IRS 990 &mdash; won't be available until the next fiscal year, since we're just geting off the ground.</p>
-                    </div>
-                    <div class="tab-pane" id="docs-state">
-                        We are a non-profit corporation, incorporated in the State of Missouri. You can access our corporate documents through the Secretary of State's <a href="http://www.sos.mo.gov/business/" target="_blank">Business Services</a> site.
-                        <br/><br/><ul><li><a href="https://www.sos.mo.gov/BusinessEntity/soskb/Corp.asp?3353789" target="_blank">ClinDesk Registration &amp; Filings</a> (Charter #N01234644)</li>
-                        <li><a href="https://www.sos.mo.gov/BusinessEntity/soskb/Corp.asp?3353954" target="_blank">White Coat Academy Name Registration</a> (Charter #X01234744)</li></ul>
-                    </div>
-                    <div class="tab-pane" id="docs-federal">Our federal filings for tax-exempt status are currently pending. We will update this site with documents when we know more!<br/><br/>
-                        If you need our EIN (or other data, such as our DUNS number), please e-mail us at <a href="mailto:legal@clindesk.org">legal@clindesk.org</a>.</div>
-                    <div class="tab-pane" id="docs-internal">We make an effort to publicize our bylaws, conflict of interest policy, and other documents regarding our corporate governance.
-                        <br/><br/><ul>
-                            <li>Corporate Bylaws (Coming soon)</li>
-                            <li>Conflict of Interest Policy (Coming soon)</li>
-                            <li>Copyright and Intellectual Property (Coming soon)</li>
-                        </ul>
-                    </div>
-                </div>
+            <div class="row-fluid">
+                <p class="lead">White Coat Academy is a part of ClinDesk, Inc, a broader initiative to open the closed culture of medicine.</p>
+                <p class="lead">You can find our legal filings and financial reports at the <a href="http://www.clindesk.org/about.html#non-profit-governance" target="_blank"> ClinDesk site</a>.</p>
+                <p class="lead">We try to be as transparent as possible &mdash; if there's more you want to know, drop us a line at <a href="mailto:team@clindesk.org">team@clindesk.org</a>.</p>
             </div>
         </section>
 
@@ -152,21 +127,21 @@
             </div>
             <div class="row-fluid">
                 <p class="lead">We love to hear from our visitors! If you have a question, please check the <a href="help.html">Help &amp; FAQ</a> page to see if your question has already been answered.</p>
-                <p class="lead">Unfortunately, we can't answer personal medical questions. There may be mistakes on ClinDesk &amp; White Coat Academy &mdash; please
+                <p class="lead">Unfortunately, we can't answer personal medical questions. There may be mistakes on White Coat Academy &mdash; please
                         always talk with your doctor about your concerns.</p>
                 <table class="table table-striped">
                     <tbody>
                     <tr>
                         <td>General Questions &amp; Feedback</td>
-                        <td><a href="mailto:team@clindesk.org">team@clindesk.org</a></td>
+                        <td><a href="mailto:team@whitecoatacademy.org">team@whitecoatacademy.org</a></td>
                     </tr>
                     <tr>
                         <td>Media &amp; PR Inquiries</td>
-                        <td><a href="mailto:media@clindesk.org">media@clindesk.org</a></td>
+                        <td><a href="mailto:media@whitecoatacademy.org">media@whitecoatacademy.org</a></td>
                     </tr>
                     <tr>
                         <td>Legal Inquiries &amp; DMCA Notificant</td>
-                        <td><a href="mailto:legal@clindesk.org">legal@clindesk.org</a></td>
+                        <td><a href="mailto:legal@whitecoatacademy.org">legal@whitecoatacademy.org</a></td>
                     </tr>
                     </tbody>
                 </table>
