More FAQ changes.

--- a/whitecoatacademy/templates/help.html
+++ b/whitecoatacademy/templates/help.html
@@ -24,7 +24,7 @@
                     We've chosen the Creative Commons 3.0 <a href="https://creativecommons.org/licenses/by-nc-sa/3.0/us/" target="_blank">BY-NC-SA License</a>.</p>
                 <p>This means three things:</p>
                 <ul>
-                    <li>BY &mdash; By Attribution: You must clearly attribute any content to ClinDesk &amp; White Coat Academy.</li>
+                    <li>BY &mdash; By Attribution: You must clearly attribute any content to White Coat Academy.</li>
                     <li>NC &mdash; Non-Commercial: You cannot use our content for commercial purposes.</li>
                     <li>SA &mdash; Share Alike: If you build upon our content, you need to share it with others using a similar license.</li>
                 </ul>
@@ -34,7 +34,7 @@
                 <p>We'd love to hear from you!  if you find a topic confusing (or think we got something wrong!), e-mail us at <a href="mailto:team@whitecoatacademy.org">team@whitecoatacademy.org</a>. Keep in mind that we cannot provide any medical advice, but we'd love feedback on our videos!</p></p>
             </div>
             <div class="well">
-                <h3>Q: How is ClinDesk financed? Do you make money?</h3>
+                <h3>Q: How is White Coat Academy financed? Do you make money?</h3>
                 <p>We're a non-profit organization, which means we depend on donations and grants to keep us going (bandwidth is expensive!).</p>
                 <p>If you've found our materials helpful, please <a href="donate.html">donate</a> so we can continue to improve our resources. </p>
             </div>
