Some jquery updates, disease page changes.
+ Local content mirrors, since this Kaldis' internet sucks.
+ TODO: Add local CDN fallback if netdna, etc. fail?

--- a/whitecoatacademy/templates/conditions/_individual_condition_page.html
+++ b/whitecoatacademy/templates/conditions/_individual_condition_page.html
@@ -5,73 +5,24 @@
 <div class="container">
 
 <div class="row">
-  <div class="span3 bs-docs-sidebar">
-    <ul class="nav nav-list bs-docs-sidenav">
-      <li><a href="#download-bootstrap"><i class="icon-chevron-right"></i> Download</a></li>
-      <li><a href="#file-structure"><i class="icon-chevron-right"></i> File structure</a></li>
-      <li><a href="#contents"><i class="icon-chevron-right"></i> What's included</a></li>
-      <li><a href="#html-template"><i class="icon-chevron-right"></i> HTML template</a></li>
-      <li><a href="#examples"><i class="icon-chevron-right"></i> Examples</a></li>
-      <li><a href="#what-next"><i class="icon-chevron-right"></i> What next?</a></li>
-    </ul>
-      <br><br>
-
-      <div class="widget widget_categories">
-          <h4>Patient Support Resources</h4>
-          <ul>
-              <li class="cat-item">
-                  <a href="#">Some Site Here</a>
-              </li>
-              <li class="cat-item">
-                  <a href="#">Some Site Here</a>(For Profit)
-              </li>
-              <li class="cat-item">
-                  <a href="#">Some Site Here</a>(Great Site!)
-              </li>
-              <li class="cat-item">
-                  <a href="#">Some Site Here</a>
-              </li>
-          </ul>
-      </div>
-
-      <div class="widget widget_tabs">
-          <h3>Tabs Widget</h3>
-          <ul class="nav nav-tabs">
-              <li class="active"><a href="#tab1" data-toggle="tab">Tab 1</a></li>
-              <li><a href="#tab2" data-toggle="tab">Tab 2</a></li>
-          </ul>
-
-          <div class="tab-content">
-              <div class="tab-pane active" id="tab1">
-                  <p>Lorem1 ipsum dolor sit amet, consec tetuer adipiscing elit. Phasellus hen drerit. Pellentesque aliquet nibh nec urna. In nisi neque, aliquet vel, dapi bus id, mattis vel, nisi. Sed pretium.</p>
-              </div>
-              <div class="tab-pane" id="tab2">
-                  <p>Praesent dapibus, neque id cursus faucibus, tortor neque egestas augue, eu vulputate magna eros eu erat. Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor, facilisis luctus, metus.</p>
-              </div>
-          </div>
-
-      </div>
-
-      <div class="widget widget_text">
-          <h3>Text Widget 1</h3>
-          <div class="textwidget"><p>Lorem ipsum dolor sit amet, consec tetuer adipiscing elit. Phasellus hen drerit. Pellentesque aliquet nibh nec urna. In nisi neque, aliquet vel, dapi bus id, mattis vel, nisi. Sed pretium.</p></div> <a href="#"><span class="label">Read More</span></a>
-      </div>
-
-
-  </div>
-
-
-<div class="span9">
-<div class="row-fluid">
-<div class="innerSpacer">
-
-{% include "_disclaimer.html" %}
-
-<div class="row-fluid pageTitle">
-    <div class="span12"><h1>The Mentor Blog</h1></div>
+    <div class="span3 bs-docs-sidebar">
+        <ul class="nav nav-list bs-docs-sidenav">
+            <li><a href="#download-bootstrap"><i class="icon-chevron-right"></i> Download</a></li>
+            <li><a href="#file-structure"><i class="icon-chevron-right"></i> File structure</a></li>
+            <li><a href="#contents"><i class="icon-chevron-right"></i> What's included</a></li>
+            <li><a href="#html-template"><i class="icon-chevron-right"></i> HTML template</a></li>
+            <li><a href="#examples"><i class="icon-chevron-right"></i> Examples</a></li>
+            <li><a href="#what-next"><i class="icon-chevron-right"></i> What next?</a></li>
+        </ul>
+    </div>
+    <br>
+    <div class="span9">
+        {% include "_disclaimer.html" %}
+        asdf span here lol
+    </div>
 </div>
 
-<!--post-->
+{#
 <div class="row-fluid">
     <div class="span12 post">
 
@@ -213,13 +164,7 @@
     </div>
 </div>
 <!--end post-->
+</div>
+ #}
 
-
-</div>
-</div>
-</div>
-
-
-</div>
-</div>
 {% endblock %}
