--- a/whitecoatacademy/templates/_base.html
+++ b/whitecoatacademy/templates/_base.html
@@ -5,11 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
     <meta name="description" content="{% block meta_description %}{% endblock %}" />
     <meta name="author" content="{% block meta_author %}Nick Semenkovich (@semenko), White Coat Academy &amp; White Coat Academy{% endblock %}" />
+    {%- if config.apphost is defined -%}
     <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.2.1/css/bootstrap.no-icons.min.css" rel="stylesheet">
     <link href="//netdna.bootstrapcdn.com/font-awesome/2.0/css/font-awesome-protocol-less.css" rel="stylesheet">
-    {%- if config.apphost is defined -%}
     <link href="{{ static('css/shared.min.css') }}" rel="stylesheet" />
     {% else %}
+    <link href="{{ static('css/bootstrap.no-icons.min.css') }}" rel="stylesheet">
+    <link href="//netdna.bootstrapcdn.com/font-awesome/2.0/css/font-awesome-protocol-less.css" rel="stylesheet">
     <link href="{{ static('css/shared.css') }}" rel="stylesheet" />
     {% endif %}
     <!--[if lt IE 9]><script type="text/javascript" src="{{ static('js/html5shiv/36.js') }}"></script><![endif]-->
@@ -63,7 +65,7 @@
 <footer class="footer">
     <div class="container">
         <p class="pull-right"><a href="#">Back to top</a></p>
-        <p>&copy; 2012 White Coat Academy, Inc., some rights reserved</p>
+        <p>&copy; 2012 White Coat Academy, a part of <a href="http://www.clindesk.org/">ClinDesk, Inc.</a>, some rights reserved</p>
         <p>Videos are licensed under the Creative Commons <a href="https://creativecommons.org/licenses/by-nc-sa/3.0" target="_blank">CC BY NC SA 3.0</a> license.</p>
         <ul class="footer-links">
             <li><a href="/">Home</a></li>
@@ -75,11 +77,13 @@
     </div>
 </footer>
 
-<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-<script type="text/javascript" src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.1.1/js/bootstrap.min.js"></script>
 {%- if config.apphost is defined -%}
+<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+<script type="text/javascript" src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.1.1/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="{{ static('js/shared.min.js') }}" async></script>
 {% else %}
+<script type="text/javascript" src="{{ static('js/jquery.js') }}"></script>
+<script type="text/javascript" src="{{ static('js/bootstrap.js') }}"></script>
 <script type="text/javascript" src="{{ static('js/shared.js') }}" async></script>
 {% endif %}
 </body>
