--- a/whitecoatacademy/templates/about.html
+++ b/whitecoatacademy/templates/about.html
@@ -3,10 +3,8 @@
 {% block tagline_text %}About Us{% endblock %}
 {% block lead %}About White Coat Academy &amp; ClinDesk{% endblock %}
 {% block maincontent%}
-<div class="container" xmlns="http://www.w3.org/1999/html" xmlns="http://www.w3.org/1999/html">
+<div class="container">
 
-  <!-- Docs nav
-  ================================================== -->
   <div class="row">
     <div class="span3 bs-docs-sidebar">
       <ul class="nav nav-list bs-docs-sidenav">
