--- a/whitecoatacademy/templates/_base.html
+++ b/whitecoatacademy/templates/_base.html
@@ -79,7 +79,9 @@
 
 {%- if config.apphost is defined -%}
 <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+<script>window.jQuery || document.write('<script src="{{ static('js/jquery.js') }}">\x3C/script>')</script>
 <script type="text/javascript" src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.1.1/js/bootstrap.min.js"></script>
+<script>$('body').popover || document.write('<script src="{{ static('js/bootstrap.js') }}">\x3C/script>')</script>
 <script type="text/javascript" src="{{ static('js/shared.min.js') }}" async></script>
 {% else %}
 <script type="text/javascript" src="{{ static('js/jquery.js') }}"></script>
