Cleanup some fallback code. Prep for prod.

--- a/whitecoatacademy/templates/_all_conditions.html
+++ b/whitecoatacademy/templates/_all_conditions.html
@@ -6,7 +6,8 @@
         <div class="caption">
           <h3>Metabolism &amp; Endocrine</h3>
           <p>Thyroid and Parathyroid, Adrenal Gland, Diabetes, Lipid and Cholesterol Disorders, Vitamins and Nutrition, Genetic Disorders</p><br>
-          <p><a href="metabolism-and-endocrine/" class="btn btn-primary">See Metabolism and Endocrine</a></p>
+          <p><a href="#" class="btn btn-primary" disabled>Coming Soon</a></p>
+          {#<p><a href="metabolism-and-endocrine/" class="btn btn-primary">See Metabolism and Endocrine</a></p>#}
         </div>
       </div>
     </li>
