Drop content moved to WCA.

--- a/clindesk/templates/about.html
+++ b/clindesk/templates/about.html
@@ -123,7 +123,7 @@
                 <div class="tab-content">
                     <div class="tab-pane active" id="home">
                         <p>At ClinDesk and White Coat Academy, we try to be as transparent as possible with our finances and governance
-                            (in the hopes that you'll <a href="donate.html">donate</a> to help keep us going!).</p>
+                            (in the hopes that you'll <a href="//www.whitecoatacademy.org/donate.html">donate</a> to help keep us going!).</p>
                         <p>You can see some of our documents listed in the above tabs. Over the next year, we'll expand these listings as we grow.</p>
                         <p>Some documents &mdash; such as the IRS 990 &mdash; won't be available until the next fiscal year, since we're just geting off the ground.</p>
                     </div>
@@ -151,9 +151,7 @@
                 <h1>Contact Us</h1>
             </div>
             <div class="row-fluid">
-                <p class="lead">We love to hear from our visitors! If you have a question, please check the <a href="help.html">Help &amp; FAQ</a> page to see if your question has already been answered.</p>
-                <p class="lead">Unfortunately, we can't answer personal medical questions. There may be mistakes on ClinDesk &amp; White Coat Academy &mdash; please
-                        always talk with your doctor about your concerns.</p>
+                <p class="lead">We love to hear from our visitors! If you have a question, please get in touch!</p>
                 <table class="table table-striped">
                     <tbody>
                     <tr>
