--- a/clindesk/templates/_base.html
+++ b/clindesk/templates/_base.html
@@ -36,7 +36,7 @@
             <div class="nav-collapse collapse">
                 <ul class="nav">
                     <li><a href="/index.html">Home</a></li>
-                    <li><a href="/donate.html">Support Us</a></li>
+                    {# <li><a href="/donate.html">Support Us</a></li> #}
                     <li><a href="/about.html">About Us</a></li>
                 </ul>
                 <form class="navbar-search pull-right" action="/search.html" id="searchform" role="search">
