--- a/clindesk/templates/donate.html
+++ b/clindesk/templates/donate.html
@@ -26,9 +26,9 @@
                     <input type="hidden" name="signatureVersion" value="2" >
                     <input type="hidden" name="signature" value="Ixt8S3PKIAPl8p/8i5NewotJoL87DsePxrWGMWHsdnA=" >
                     <h2 class="text-warning">Hosting for A Day</h2><br>
-                    <p class="lead">Running our website is expensive!</p>
-                    <p class="lead">Help spread medical knowledge by keeping us running.</p>
-                    <button type="submit" class="btn btn-warning btn-large">Help Run our Website for <b>$25</b></button>
+                    <p class="lead">Running our websites is expensive!</p>
+                    <p class="lead">Help open medical knowledge by keeping us running.</p>
+                    <button type="submit" class="btn btn-warning btn-large">Help Run our Websites for <b>$25</b></button>
                 </form>
             </div>
         </div>
